--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,3 +32,19 @@ jobs:
       - name: ▶️ Run tests with pytest
         run: |
           pytest tests/ --headless --alluredir=allure-results
+
+      - name: 🔧 Install Allure commandline
+        run: |
+          sudo apt-add-repository ppa:qameta/allure -y
+          sudo apt-get update
+          sudo apt-get install allure -y
+          
+      - name: 🧪 Generate Allure report
+        run: |
+          allure generate allure-results --clean -o allure-report
+          
+      - name: 💾 Upload Allure report
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-report
+          path: allure-report
