Fix Allure install: use manual download for Ubuntu 24.04

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,11 +33,12 @@ jobs:
         run: |
           pytest tests/ --headless --alluredir=allure-results
 
-      - name: 🔧 Install Allure commandline
+      - name: 🔧 Install Allure CLI manually
         run: |
-          sudo apt-add-repository ppa:qameta/allure -y
-          sudo apt-get update
-          sudo apt-get install allure -y
+          wget https://github.com/allure-framework/allure2/releases/download/2.27.0/allure-2.27.0.tgz
+          tar -zxvf allure-2.27.0.tgz
+          sudo mv allure-2.27.0 /opt/allure
+          sudo ln -s /opt/allure/bin/allure /usr/bin/allure
           
       - name: 🧪 Generate Allure report
         run: |
